# SOLVE_THIS

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt  readme.org  run
include/: analyzer.h  analyzer.hh  binary_tree.h  binary_tree.hh  binary_tree_excpt.h  binary_tree_excpt.hh  converter.h  converter.hh  expression_tree_calculator.h  expression_tree_calculator.hh  expression_tree_calculator_excpt.h  expression_tree_calculator_excpt.hh  node_doubly_linked.h  node_doubly_linked.hh  node_singly_linked.h  node_singly_linked.hh  parser.h  parser.hh  parser_excpt.h  parser_excpt.hh  queue.hh  queue_excpt.h  queue_excpt.hh  queue_singly_linked.h  queue_singly_linked.hh  solve_utils.h  stack.hh  stack_excpt.h  stack_excpt.hh  stack_singly_linked.h  stack_singly_linked.hh  utils.h  utils.hh
src/: analyzer.cc  binary_tree.cc  binary_tree_excpt.cc  converter.cc  expression_tree_calculator.cc  expression_tree_calculator_excpt.cc  gen_expression.py  main.cc  node_doubly_linked.cc  node_singly_linked.cc  parser.cc  parser_excpt.cc  queue.cc  queue_excpt.cc  queue_singly_linked.cc  solve_utils.cc  stack.cc  stack_excpt.cc  stack_singly_linked.cc  utils.cc
src/tests/: converter_test.cc  expression_tree_calculator_test.cc  parser_test.cc  queue_singly_linked_test.cc  stack_singly_linked_test.cc
src/tests/inputs/: expression_size-75000.txt
test/benchmark/: analyzer.cc  analyzer.h
test/inputs/: expression_size-60000.txt  expression_size-70000.txt
test/unit/: expression_tree_calculator_test.cc  main_doctest.cc
tests/: converter_test.cc  expression_tree_calculator_test.cc  parser_test.cc  queue_test.cc  stack_test.cc
tests/inputs/: expression_size-1000.txt  expression_size-10000.txt  expression_size-100000.txt  expression_size-50000.txt
tools/: gen_expression.py
